@@ -1,3 +1,7 @@
+2004-04-14 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b38
+
+	* Change: Show Slideshow link and Search only when there is at least one photo.
+
 2004-04-12 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b37
 
 	* Bugfix: Added missing echo in move_photo as the usage of 
